# syfthub

./: .dockerignore  .editorconfig  .env.deploy.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COLLECTIVES_PURPOSE_AND_UX.md  COLLECTIVES_UI_CONTEXT.md  COMPATIBILITY_ANALYSIS.md  CONTRIBUTING.md  LICENSE  MPP_TODO.md  Makefile  README.md  REFACTORING_PLAN.md  RELEASING.md  Untitled.ipynb  VALUE_PROPOSITION_2026.md  app.sh  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  pyproject.toml  requirements.txt  sdk-simplify-backlog.md  syfthub.db
aggregator/: .dockerignore  README.md  pyproject.toml
aggregator/src/aggregator/: main.py
aggregator/src/aggregator/api/: dependencies.py  router.py
aggregator/src/aggregator/api/endpoints/: chat.py  health.py
aggregator/src/aggregator/clients/: __init__.py  data_source.py  error_reporter.py  model.py  nats_transport.py  syfthub.py  tunnel.py
aggregator/src/aggregator/core/: config.py
aggregator/src/aggregator/observability/: constants.py  context.py  logger.py  middleware.py  sanitizer.py
aggregator/src/aggregator/schemas/: __init__.py  internal.py  requests.py  responses.py
aggregator/src/aggregator/services/: generation.py  orchestrator.py  prompt_builder.py  retrieval.py
aggregator/tests/: test_health.py  test_prompt_builder.py  test_schemas.py  test_services.py  test_tunnel.py  test_tunnel_client.py
cli/: .gitignore  Makefile  README.md  SIMPLIFY_TASKS.md  go.mod  go.sum  install.sh  pyproject.toml  syft.spec
cli/cmd/syft/: main.go
cli/internal/clientutil/: client.go
cli/internal/cmd/: add.go  agent.go  agent_attachments.go  agent_test.go  alias_kind.go  browser_auth.go  browser_auth_test.go  completion.go  config.go  list_aliases.go  login.go  logout.go  ls.go  node.go  node_endpoint.go  node_endpoint_log.go  node_endpoint_setup.go  node_endpoint_setup_init.go  node_endpoint_skill.go  node_init.go  node_init_test.go  node_logs.go  node_marketplace.go  node_policy.go  node_policy_test.go  node_policy_transaction.go  node_run.go  node_start.go  node_status.go  node_stop.go  payment_handler.go  payment_handler_test.go  query.go  register.go  remove.go  reset_password.go  root.go  root_test.go  setup_io.go  sysproc_unix.go  (+10 more)
cli/internal/completion/: completion.go
cli/internal/config/: config.go
cli/internal/connectors/: anthropic.yaml  custom-api.yaml  github.yaml  google-drive.yaml  google-sheets.yaml  notion.yaml  openai.yaml  postgres.yaml  registry.go  registry_test.go  slack.yaml  telegram.yaml
cli/internal/nodeconfig/: config.go  config_test.go
cli/internal/output/: output.go
cli/internal/update/: update.go  update_test.go
cli/internal/version/: version.go
cli/scripts/: build.py
cli/src/syfthub_cli/: __init__.py  completion.py  config.py  main.py  output.py  update.py
cli/src/syfthub_cli/commands/: auth.py  config_cmd.py  discovery.py  management.py  query.py  update_cmd.py  utils.py
cli/tests/: __init__.py  conftest.py  test_auth.py  test_completion.py  test_config.py  test_discovery.py  test_management.py  test_query.py  test_utils.py
components/aggregator/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
components/aggregator/src/aggregator/: __init__.py  attachment_crypto.py  crypto.py  main.py
components/aggregator/src/aggregator/api/: __init__.py  router.py  (+1 more)
components/aggregator/tests/: conftest.py  test_attachment_crypto.py  test_attachment_relay.py  test_attachment_schemas.py  test_crypto.py  test_data_source_parse.py  test_data_source_retry.py  test_middleware.py  test_nats_transport_encryption.py  test_orchestrator_reranking.py  test_orchestrator_sse_events.py  test_payment_negotiator.py  test_prompt_builder.py  test_schemas.py  test_session_attachment_key_handshake.py  test_session_transport_tunnel_error.py
components/mcp/: .env.example  .gitignore  Dockerfile  README.md  fastmcp.json  pyproject.toml  run_https.py  server.py  syfthub_client.py  test_payment_required.py
mcp/: .dockerignore  Dockerfile  README.md  generate_rsa_key.py  pyproject.toml  server.py
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/examples/: demo_workflow.py  simple_example.py
sdk/python/src/syfthub_sdk/: __init__.py  _http.py  _pagination.py  accounting.py  agent.py  aggregators.py  api_tokens.py  auth.py  chat.py  client.py  exceptions.py  hub.py  models.py  mq.py  my_endpoints.py  search.py  syftai.py  users.py
sdk/python/tests/: conftest.py
sdk/python/tests/integration/: __init__.py  conftest.py  test_auth.py  test_heartbeat.py  test_hub.py  test_mq.py  test_my_endpoints.py  test_users.py
sdk/python/tests/unit/: __init__.py  test_agent.py  test_chat.py  test_mq.py  test_search.py  test_syftai.py
syfthub-api/: .env.example  .pre-commit-config.yaml  README.md  check_endpoints.py  example.py  pyproject.toml  run_tunnel_local.py  server.py  test_file_mode_live.py  test_query_endpoints.py  tunnel_client.py  tunneled_example.py
syfthub-api/.github/workflows/: ci.yml
syfthub-api/examples/: file_based_server.py  http_server.py  nats_server.py  policies_server.py
syfthub-api/examples/file_endpoints/echo-model/: README.md  runner.py
syfthub-api/examples/file_endpoints/python-expert/: README.md  pyproject.toml  runner.py
syfthub-api/examples/file_endpoints/sample-docs/: README.md  runner.py
syfthub-api/src/syfthub_api/: __init__.py  app.py  config.py  exceptions.py  heartbeat.py  logging.py  nats_transport.py  schemas.py
syfthub-api/src/syfthub_api/file_mode/: __init__.py  env_loader.py  loader.py  policy_loader.py  provider.py  requirements_manager.py  schemas.py  venv_manager.py  watcher.py
syfthub-api/tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_file_mode_env_loader.py  test_file_mode_executors.py  test_file_mode_loader.py  test_file_mode_policy_loader.py  test_file_mode_provider.py  test_file_mode_requirements.py  test_file_mode_schemas.py  test_heartbeat.py  test_integration.py  test_schemas.py  test_sync.py  test_tunnel.py
(+1626 files in other folders)
