[project]
name = "syfthub-cli"
version = "0.1.0"
description = "Command-line interface for interacting with SyftHub"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "SyftHub Team" }]
keywords = ["syfthub", "cli", "syft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "syfthub-sdk",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
syft = "syfthub_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syfthub_cli"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures are often used for side effects without being directly referenced
"tests/**/*.py" = ["ARG001", "ARG002"]
"cli/tests/**/*.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["syfthub_cli", "syfthub_sdk"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
# Disable unused-ignore warnings since pre-commit and CI have different environments
# (pre-commit uses --ignore-missing-imports, CI has syfthub_sdk installed)
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "-n",
    "auto",
    "--dist",
    "loadfile",
]
