[project]
name = "syfthub-mcp"
version = "0.1.0"
description = "SyftHub MCP Server with OAuth 2.1 authentication integrated with SyftHub accounts"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[auth]>=2.12.4",
    "python-dotenv==1.1.0",
    "requests>=2.31.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "httpx>=0.27.0",
    "pyjwt>=2.0.0",
    "python-multipart>=0.0.5",
    "aiohttp>=3.13.0",
    "email-validator>=2.0.0",
    "syft-accounting-sdk @ git+https://git@github.com/OpenMined/accounting-sdk.git",
    "syfthub-sdk",
]

[tool.uv.sources]
syfthub-sdk = { path = "../sdk/python", editable = true }

[tool.uv]
override-dependencies = [
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
]
