[project]
name = "syfthub-aggregator"
version = "0.1.0"
description = "RAG orchestration service for SyftHub - aggregates context from data sources and generates responses via model endpoints"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "SyftHub Team" }]
keywords = ["rag", "llm", "aggregator", "syfthub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.0.0",  # Replaced python-jose (unused, brought ecdsa vulnerability)
    "sse-starlette>=2.2.0",
    "structlog>=24.0.0",
    "nats-py>=2.7.0",
    "cryptography>=42.0.0",  # X25519 ECDH + AES-256-GCM for NATS tunnel E2E encryption
    # Federated reranking and LLM citation attribution (GitHub-hosted, not on PyPI)
    "federated-aggregation @ git+https://github.com/siddhant230/Aggregator_package.git",
    "attribution-lib @ git+https://github.com/siddhant230/Attribution_package.git",
    # Security pins for transitive dependencies
    "starlette>=0.49.1",  # CVE-2025-62727: O(n^2) DoS via Range header
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",  # For TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aggregator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["aggregator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-n",
    "auto",
    "--dist",
    "loadfile",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sse_starlette.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["federated_aggregation.*", "attribution.*"]
ignore_missing_imports = true
