[project]
name = "syfthub-mcp"
version = "0.1.0"
description = "SyftHub MCP Server with OAuth 2.1 authentication integrated with SyftHub accounts"
requires-python = ">=3.12"
dependencies = [
    # Core MCP framework - pinned for security (CVE-2025-66416, GHSA-rj5c-58rq-j5g5, GHSA-fg6f-75jq-6523)
    # Note: auth extra deprecated in 2.14+, auth features now included by default
    "fastmcp>=2.14.3",
    # MCP SDK with DNS rebinding protection (CVE-2025-66416)
    "mcp>=1.23.0",
    # HTTP libraries with security fixes
    "requests>=2.32.4",  # CVE-2024-47081: .netrc credentials leak
    "httpx>=0.27.0",
    "aiohttp>=3.13.3",  # CVE-2025-69223 and related DoS vulnerabilities
    "urllib3>=2.6.3",  # CVE-2025-66471, CVE-2026-21441: decompression bomb
    # Web framework dependencies with security fixes
    "starlette>=0.49.1",  # CVE-2025-62727: O(n^2) DoS via Range header
    "werkzeug>=3.1.6",  # CVE-2025-66221, CVE-2026-21860, CVE-2026-27199: Windows device names
    "authlib>=1.6.11",  # CVE-2025-68158, CVE-2026-28802, CVE-2026-27962, CVE-2026-28490, CVE-2026-28498
    # Pydantic (compatible with fastmcp>=2.14.3)
    "pydantic>=2.11.7",
    # Authentication and crypto
    "cryptography>=41.0.0",
    "pyjwt>=2.12.0",  # CVE-2026-32597: accepts unknown crit header extensions
    # Utilities
    "python-dotenv>=1.2.2",  # CVE-2025-67006: symlink following allows arbitrary file overwrite
    "python-multipart>=0.0.26",
    "email-validator>=2.0.0",
    # SyftHub integration
    "syft-accounting-sdk @ git+https://git@github.com/OpenMined/accounting-sdk.git",
    "syfthub-sdk",
]

[tool.setuptools]
py-modules = ["server", "syfthub_client"]

[tool.uv.sources]
syfthub-sdk = { path = "../../sdk/python", editable = true }

[tool.uv]
override-dependencies = [
    # Security overrides - force minimum secure versions even when transitive deps pin older versions
    # NOTE: diskcache 5.6.3 (CVE-2025-69872) is a transitive dep via fastmcp -> py-key-value-aio[disk].
    # No upstream fix is available. The cache directory is hardened in Dockerfile (chmod 700, owned by
    # syfthub user only). Monitor https://github.com/grantjenks/python-diskcache for a patched release.
    "requests>=2.32.4",  # CVE-2024-47081: syft-accounting-sdk pins 2.32.3
    "urllib3>=2.6.3",  # CVE-2025-66471, CVE-2026-21441
    "starlette>=0.49.1",  # CVE-2025-62727
    "werkzeug>=3.1.6",  # CVE-2025-66221, CVE-2026-21860, CVE-2026-27199
    "authlib>=1.6.11",  # CVE-2025-68158, CVE-2026-27962, CVE-2026-28490, CVE-2026-28498, CVE-2026-28802
    "aiohttp>=3.13.3",  # CVE-2025-69223
    "mcp>=1.23.0",  # CVE-2025-66416
    "pydantic>=2.11.7",  # syft-accounting-sdk pins ==2.11.4; override for fastmcp compat
    "python-dotenv>=1.2.2",  # CVE-2025-67006: syft-accounting-sdk pins ==1.1.0 (vulnerable)
    "Pygments>=2.20.0",  # CVE-2025-68139: ReDoS via inefficient regex for GUID matching
]
