# Python Expert Endpoint Dependencies
# This file declares dependencies for the endpoint's isolated execution.
# When runtime.mode is "subprocess", these are installed in a virtual environment.

[project]
name = "python-expert-endpoint"
version = "1.0.0"
description = "Python Expert AI assistant endpoint"
requires-python = ">=3.11"

# Core dependencies for this endpoint
dependencies = [
    "httpx>=0.27.0",      # For making HTTP requests to LLM APIs
    "tiktoken>=0.5.0",    # For token counting
]

[project.optional-dependencies]
# Machine learning extras (install with runtime.extras: [ml])
ml = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

# Development/testing extras
dev = [
    "pytest>=8.0",
]
